--- a/RASD/requirements.tex
+++ b/RASD/requirements.tex
@@ -4,11 +4,11 @@
 
 \subsubsection{User interfaces}
 
-The user interfaces must satisfy the following UI constraints:
+User interfaces must satisfy the following UI constraints:
 \begin{itemize}
 	\item Web application
 	\begin{enumerate}
-		\item The web pages must adhere to the W3C standards. In particular, the software shall conform to the HTML~5~\cite{w3c-html5}, CSS~\cite{w3c-css} standards.
+		\item Web pages must adhere to the W3C standards. In particular, the software shall conform to the HTML~5~\cite{w3c-html5}, CSS~\cite{w3c-css} standards.
 	\end{enumerate}
 	\item Mobile application
 	\begin{enumerate}
@@ -22,16 +22,16 @@ The user interfaces must satisfy the following UI constraints:
 			\item The first screen (homepage) must ask the guest to log in or sign up in order to begin operations.
 			\item Once logged, the homepage must show the car search page. It also includes one button for log out and buttons that open different pages. These pages are:
 				\begin{itemize}
-					\item reservation page; where the driver can mainly notify the system about his/her position in order to unlock the car.
-					\item profile management page; where the driver can manage his/her credentials or update his/her driving license and payment method.
-					\item past cars rent page; where the driver can manage his/her credentials or update his/her driving license and payment method.
+					\item reservation page; where the driver can find the functionality in order to unlock the car. The page also provides informations about the reserved car.
+					\item profile management page; where the driver can manage his/her profile informations or update his/her driving license and payment method.
+					\item car rental log book page; where the driver can find information about his/her past rentals.
 				\end{itemize}
 			\item UI controls and views must be suitable for the input interface and the screen size.
 		\end{enumerate}
 	\item Car application
 	\begin{enumerate}
-		\item Radio and GPS navigator applications must be implemented.
-		\item Always notifies the driver about his/her current charges.
+		\item radio and GPS navigator applications must be implemented.
+		\item always notifies the driver about his/her current charges.
 	\end{enumerate}
 	\item Server back-end
 	\begin{enumerate}
@@ -59,10 +59,10 @@ The required software product used by the car application is:
 \begin{itemize}
 	\item Java Embedded\footnote{\url{http://www.oracle.com/technetwork/java/embedded/overview/index.html}}
 \end{itemize}
-The required operating systems for the mobile application atr:
+The required operating systems for the mobile application are:
 \begin{itemize}
-	\item iOS 8 or more recent
-	\item Android 6.0 or more recent
+	\item iOS 8 or better
+	\item Android 6.0 or better
 \end{itemize}
 
 A set of APIs for the several functionalities must be provided by the system
@@ -206,25 +206,25 @@ The system then informs Bob that he is successfully registered.
 \subsubsubsection{Purpose}
 Any logged driver, in possession of a valid driving license and a regular status of payments, can search and reserve a car through the web application or the mobile app.
 
-The system shows him/her a map, of the area nearby the driver, with the available cars as colorful markers. There are 3 diffent colors for the markers:
+The system shows a map, of the area nearby him/her, with the available cars represented as colorful markers. There are 3 diffent colors for the markers:
 \begin{itemize}
-	\item red: 50-75\% of the battery empty
-	\item yellow: 25-50\% of the battery empty
-	\item green: 0-25\% of the battery empty
+	\item red: 25-50\% of battery charge
+	\item yellow: 50-75\% of battery charge
+	\item green: 75-100\% of battery charge
 \end{itemize}
-The driver can also search cars nearby from a given address through a search box on the page.
+The driver can also search nearby cars from a given address through a search box on the page.
 
-Once the driver chooses the car he can click on its marker and a new dynamic frame will show more information about the car and the possibility to reserve it clicking on the button "Reserve".
-The system notifies the driver that he/she succesfully reserved a car.
+Once the driver chooses the car he can click on its marker and a new dynamic frame will show more informations about the car and the possibility to reserving it by clicking on the button "Reserve".
+The system then notifies the driver that he/she succesfully reserved a car.
 
-cars with more than 75\% of the battery empty require assistance from the operators to be recharged and the system won't show them as available. 
+Cars with less charge than 25\% of battery charge require assistance to be recharged and the system won't show them as available to the drivers. 
 
 
 \subsubsubsection{Scenario 1}
-Bob logs in the PowerEnJoy application through his web browser. He wants to reserve a car because an important meeting is waiting for him. Once logged the system redirects him to the homepage that now shows the car search page. Bob realizes there's only a car with a red marker within 1km from him. Bob has to hurry up so he clicks on the red marker and than on the button "Reserve".
+Bob logs in the PowerEnJoy application through his web browser. He wants to reserve a car because an important meeting is waiting for him. Once logged, the system redirects him to the homepage that now shows the car search page. Bob realizes there's only a car with a red marker within 1km from him. Bob has to hurry up so he clicks on the red marker and then on the button "Reserve". Bob has succesfully reserved the car and he get redirect to the reservation page.
 
 \subsubsubsection{Scenario 2}
-Alice logs in the PowerEnJoy application through his mobile phone. She wants to reserve a car but everytime she clicks on the button "Reserve" of an available car the system stops her showing a dynamic message box that remember her to solve her pending payments. Once alice solves her pending payments she will be able to reserve an available car.
+Alice logs in the PowerEnJoy application through his mobile phone. She wants to reserve a car but everytime she clicks on the button "Reserve" of an available car the system shows her a dynamic message box that remember her to solve her pending payments. Once any pending payments is solved she will be able to reserve an available car.
 
 \begin{figure}[H]
 	\centering
@@ -253,11 +253,11 @@ Alice logs in the PowerEnJoy application through his mobile phone. She wants to 
 			\hline
 			Event Flow & \begin{enumerate}
 				\item The driver opens the home page and search an available car.
-				\item Once choosen, the driver clicks on "Reserve".
+				\item Once chosen, the driver clicks on "Reserve".
 			\end{enumerate}
 			\\
 			\hline
-			Output condition & The system notifies the driver that he/she succesfully reserved the choosen car \\
+			Output condition & The system notifies the driver that he/she succesfully reserved the chosen car \\
 			\hline
 			
 			Exception &  \begin{itemize}
@@ -283,12 +283,12 @@ Alice logs in the PowerEnJoy application through his mobile phone. She wants to 
 
 \subsubsubsection{Associated functional requirements}
 
-Interactions between system and driver occour through car or mobile applications.
+Interactions between system and driver occur through car or mobile applications.
 
 \begin{enumerate}
-	\item The driver must be logged in order to search and reserved a car.
-	\item The system must show to the driver a map of the area, within a range of 1km from him/her or from a given address, with the available cars.
-	\item The system must provide more information about an availabe car. These information are
+	\item The driver must be logged into the system in order to search and reserve a car.
+	\item The system must show the driver a map of the area, within a 1km range from him/her or from a given address, with the available cars.
+	\item The system must provide more informations about an available car. These informations are:
 		\begin{itemize}
 			\item license plate
 			\item address
@@ -297,27 +297,27 @@ Interactions between system and driver occour through car or mobile applications
 	\item In order to reserve a car the driver's driving license mustn't be expired. \label{f-expired}
 	\item In order to reserve a car the driver's status of payments must be regular. \label{f-regular}
 	\item The system must prevent the driver from reserving more than one car at time.
-	\item The system must prevent the driver from reserving a car already reserved, or in use, by another driver.
-	\item The system must prevent the driver from reserving a "Out\_of\_service" car.
+	\item The system must prevent the driver from reserving a car already reserved, or in use by another driver.
+	\item The system must prevent the driver from reserving an "Out\_of\_service" car.
 	\item After a reservation is completed, the system automatically tags the reserved car as "Reserved".
-	\item After a reservation is completed, the system automatically redirects the driver to the reservation page fullfilled with the reservation information.
+	\item After a reservation is completed, the system automatically redirects the driver to the reservation page completed by with the reservation informations.
 \end{enumerate}
 
-\subsubsection{Car use}
+\subsubsection{Car usage}
 
 \subsubsubsection{Purpose}
 The driver can use the car after he/she reserved it.
 
-When the driver is nearby the reserved car he/she can click on the button "I'm nearby" of the mobile reservation page and the system will check the GPS signal of both the car and the driver's mobile phone, to assess if they are within a 25 meters range. If they are within that range, the system will unlock the car and the driver can enter. This operation is available only through the mobile application.
+When the driver is nearby the reserved car he/she can click the button "I'm nearby" on the mobile reservation page and the system will check the GPS signal of both the car and the driver's mobile phone, to assess if they are within a 25 meters range. If they are within that range, the system will unlock the car and the driver can enter it. This operation is available only through the mobile application.
 
 As soon as the engine ignites, the system starts charging the driver for a given amount of money per minute; the driver is notified of the current charges through a screen on the car.
 
 \subsubsubsection{Scenario 1}
-Bob has already reserved a car and he is going to pick it up. He is far about 50 meters from the car and he clicks on the button "I'm nearby" of the mobile application. The system checks the GPS signal of both the car and the Bob's mobile phone, and it doesn't unlock the car notifing Bob that he's too far from it.
+Bob has already reserved a car and he is going to pick it up. He is about 50 meters from the car and he clicks the button "I'm nearby" on the mobile application. The system checks the GPS signal of both the car and Bob's mobile phone, and doesn't unlock the car notifying Bob that he's too far from the car.
 
-Once Bob is in front of the car he clicks again on "I'm nearby", the system unlocks the car and he finally enter.
+Once Bob is in front of the car he clicks again on "I'm nearby", the system unlocks the car and he can finally enter.
 
-Bob starts the car and the system notifies him about his current charges thanks to the car application. He can start his ride.
+Bob starts the car and the system notifies him about his current charges through the car application. He can start his ride.
 
 \begin{figure}[H]
 	\centering
@@ -344,7 +344,7 @@ Bob starts the car and the system notifies him about his current charges thanks 
 			\hline
 			Event Flow & \begin{enumerate}
 				\item The driver is within 25 meters from the car.
-				\item The driver opens the reservation mobile page, through a section of the homepage, and clicks on "I'm nearby".
+				\item The driver opens the reservation mobile page, through a button of the homepage, and clicks on "I'm nearby".
 				\item The system unlocks the car.
 				\item The driver enters and starts the car. 
 			\end{enumerate}
@@ -371,28 +371,27 @@ Bob starts the car and the system notifies him about his current charges thanks 
 	\begin{center}
 		\centering
 		\includegraphics[height=0.9\textheight, keepaspectratio]{sequence_diagram/Unlock.png}
-		\caption{Sequence diagram of the car use process.}
+		\caption{Sequence diagram of the car usage process.}
 	\end{center}
 \end{figure}
 
 \subsubsubsection{Associated functional requirements}
 
 \begin{enumerate}
-	\item The driver can only use the mobile application to unluck the car. 
-	\item It mustn't pass more than one hour from the reservation to the 
-	unlock of the car. In this case the system will tag the car as "Available" again.\label{f-reservationcanc}
-	\item The system checks the GPS signal of both the car and the driver's mobile phone, to assess if they are within a 25 meters range. If they are within that range, the system will unlock the car. \label{f-nearby}
+	\item The driver can only use the mobile application to unlock the car. 
+	\item From the reservation to the unlocking of the car must not pass more than one hours. Otherwise the system will tag again the car as "Available". The driver is notified about the end of the rental operation.\label{f-reservationcanc}
+	\item The system checks the GPS signal of both the car and driver's mobile phone, to assess if they are within a 25 meters range. If they are within that range, the system will unlock the car. \label{f-nearby}
 	\item The driver must enter in the car to start it.
-	\item The system will start charges the driver once he/she starts the car.
+	\item The system will start charging the driver once he/she starts the car.
 	\item Once the car is unlocked, the system tags it as "In\_use".
-	\item The car application must notify the driver about the current charges.
+	\item The car application must notify the driver about current charging.	
 \end{enumerate}
 
-\subsubsection{Vehicle parking}
+\subsubsection{Car parking}
 
 \subsubsubsection{Purpose}
 
-Once the driver has finished to use the car he/she should be able to park it in safe areas provided by the system. These areas are displayed by the navigator car application.
+Once the driver has finished using the car he/she should be able to park it in safe area provided by the system. These areas are displayed by the navigator car application.
 
 After parking the car, the driver can exit from it. The system will lock the car and automatically charges the driver on the credit card indicated during the registration.
 
@@ -400,7 +399,7 @@ If a driver brought other people with him/her, he/she will get a 10\% discount o
 
 \subsubsubsection{Scenario 1}
 
-Bob is almost at his important meeting. The GPS navigator application shows several park areas and Bob chooses one of them for park his car. He checks if there's atleast one available park and he fortunatly finds one. Once he turns his car off and gets out from it, the system stops charging him and he can finall enjoy his evening.
+Bob is almost at his important meeting. The GPS navigator application shows several parking areas and Bob chooses one of them to park his car. He checks if there's at least one available parking spot and he finds one. Once he turns off the car and gets out, the system stops charging him and he can finally enjoy his evening.
 
 \begin{figure}[H]
 	\centering
@@ -417,23 +416,23 @@ Bob is almost at his important meeting. The GPS navigator application shows seve
 			Goals & G1.3, G3
 			\\
 			\hline
-			Input condition & The driver is using the reserved car and wants to park it nearby his/her destination. He/she could be accompanied by some passangers. \\
+			Input condition & The driver is using the reserved car and wants to park it nearby his/her destination. He/she could be accompanied by some passengers. \\
 			\hline
 			Event Flow & \begin{enumerate}
-				\item The driver finds a park thank to the car application.
-				\item The driver parks the car in an available park of a safe area.
-				\item The drive turns the car off and gets out from it. If he/she is accompanied by someone, also the passengers get out from the car.
-				\item The system checks if the car can be locked and if discounts are appliable. 
+				\item The driver finds a parking spot via the car application.
+				\item The driver parks the car in an available spot of a safe area.
+				\item The driver turns off the car and gets out. If he/she is accompanied by someone, they get out too.
+				\item The system checks if the car can be locked and if discounts are applicable. 
 			\end{enumerate}
 			\\
 			\hline
-			Output condition & The system locks the car, directly charges the driver via the payment method that he/she indicated during the registration and notifies him/her that the rent has been terminated.\\
+			Output condition & The system locks the car, directly charges the driver via the payment method that he/she indicated during the registration process and notifies him/her that the rental has ended.\\
 			\hline
 			
 			Exception &  \begin{itemize}
-				\item The driver has an incident.
-				\item The car is completely discharged.	
-				\item There's no free parks available in the near safe area.	
+				\item The driver has an accident.
+				\item The car battery completly run out.	
+				\item There's no parking spots available in a nearby safe areas.	
 			\end{itemize}
 			\\
 			\hline
@@ -453,38 +452,38 @@ Bob is almost at his important meeting. The GPS navigator application shows seve
 
 \begin{enumerate}
 	\item The driver must park his/her car in a safe area.
-	\item The driver must get out from the car remembering to close all the doors and to roll up all the windows of the car, otherwise the system won't stop charge the driver and after 5 minutes a notification via sms will remember him/her that the rent operation can't be completed.
+	\item The driver must get out from the car remembering to close all doors and to roll up all windows of the car, otherwise the system won't stop charging him/her, and after 5 minutes will send him/her a sms notification to remember him/her that the rental operation can't be ended correctly.
 	After 30 minutes the system tags the car as "Out\_of\_service" and it will apply a fee of 20 euros to the driver.
-	\item Once the car is locked, The system must directly charge the driver via the payment method that he/she indicated during the registration.
-	\item Once the car is locked, the system must send a message for notify the driver about the rent costs and the rental operation has been completed via sms. The reservation page will be cleared and closed by the system.
-	\item Once the car is locked, the system checks its condition. If the car has more than 75\% of the battery empty or a component of it is not working correctly, the system must tag the car as "Out\_of\_service". Otherwise the system tags the car as "Available".
-	\item Other requirements only for G3 are:
+	\item Once the car is locked, the system must directly charge the driver via the previosly indicate payment method.
+	\item Once the car is locked, the system must send a message to notify the driver about rental costs. The rental is now concluded. The reservation page will be cleared and closed by the system.
+	\item Once the car is locked, the system checks its conditions. If battery power is lower  than 25\% or a component of it is not working correctly, the system must tag the car as "Out\_of\_service". Otherwise the system tags the car as "Available".
+	\item Other requirements for G3 only are:
 	\begin{enumerate}
 		\item car's sensors must detect correctly the number of passengers.
-		\item If the driver is accompanied by atleast one passanger from the start of the ride, the system will apply him/her a discount of 10\% on the last ride, otherwise there won't be any discount.
+		\item if the driver is accompanied by at least one passenger during the whole ride, the system will apply him/her a direct discount of 10\%, otherwise there won't be any discount.
 	\end{enumerate}
 \end{enumerate}
 
 \subsubsection{Service discounts and fees}
 
 \subsubsubsection{Purpose}
-During the rent of a car, the driver can be rewarded with discounts or punished with fees.
-For instance, if a driver lefts a car with no more than 50\% of the battery empty, the system applies a discount of 20\% on the last ride.
+During the rental of a car, the driver can be rewarded with discounts or punished with fines.
+For instance, if a driver leaves a car with more than 50\% of battery charge, the system applies a discount of 20\% on the last ride.
 
 \subsubsubsection{Scenario 1}
 
-Bob is going too fast because he is late for his important meeting. He commits a serious infraction and gets a speeding ticket. The system pays his fine and directly charges him by the same ammount of the fine plus an addictional fee of 10 euros provided by the system. Bob is not happy.
+Bob is going too fast because he is late for his important meeting. He commits a serious infraction and gets a speeding ticket. The system pays his fine and directly charges him the same amount of the fine plus an addictional fee of 10 euros. Bob is not happy.
 
 \subsubsubsection{Associated functional requirements}
 
 Requirements for G4 are the following:
 
 \begin{enumerate}
-	\item Discounts must be applied one at time on the total cost of the rent excluding any fee or fine. The total cost of the rent is updated everytime a discount is applied.
-	\item For each fee applied to a driver, it will be directly charged through the driver's payment method indicated during the registration, indipendently by any rental operations.
-	\item If a driver doesn't pick up a reserved car within 1 hour, the system applies a fee of 1 euro.
-	\item If a driver gets a fine, the system pays his/her fine and directly charges him/her by the same ammount of the fine plus an addictional fee of 10 euros provided by the system.
-	\item If a driver lefts a car with no more than 50\% of the battery empty, the system applies a discount of 20\% on the last ride.
+	\item Discounts must be applied one at time on total rental price excluding any fee or fine. The total rental price is updated everytime a discount is applied.
+	\item Fines or fees are applied after any discount.
+	\item If a driver doesn't pick up a reserved car within 1 hour, the system applies a fine of 1 euro.
+	\item If a driver gets a fine, the system pays his/her fine and directly charges him/her by the same amount of the fine plus an addictional fee of 10 euros.
+	\item If a driver leaves a car with more than 50\% of battery charge, the system applies a discount of 20\% on the last ride.
 \end{enumerate}
 
 \subsection{Performance Requirements}
@@ -496,12 +495,19 @@ Requirements for G4 are the following:
 	\item There is no limit on the total number of registered drivers.
 \end{enumerate}
 
-\subsection{Software System Attributes}
-
-\subsection{Availability}
-
-\begin{enumerate}
-	\item The system must guarantee an availability of 99\%.
-\end{enumerate}
-
 \subsection{Alloy}
+
+\lstset{
+	language=alloy,
+	numbers=left,
+	numberstyle=\tiny,
+	stepnumber=2,
+	tabsize=4,
+	keywordstyle=\color{alloy-keyword}\bfseries,
+	commentstyle=\color{alloy-comment},
+	stringstyle=\color{alloy-string},
+	basicstyle=\small\fontfamily{pcr}\selectfont, % Courier font family
+}
+
+% Includes the Alloy model file.
+\lstinputlisting{alloy/PowerEnJoy.als}
