--- a/RASD/Rasd.tex
+++ b/RASD/Rasd.tex
@@ -3,6 +3,15 @@
 \usepackage{titlesec}
 \usepackage{hyperref}
 \usepackage{float}
+
+% Packages and configuration for Alloy code listing
+\usepackage{listings}
+\usepackage{alloy}
+\usepackage{color}
+\definecolor{alloy-keyword}{rgb}{0.23, 0.23, 0.7}
+\definecolor{alloy-comment}{rgb}{0.18, 0.64, 0.18}
+\definecolor{alloy-string}{rgb}{0.71, 0.18, 0.71}
+
 \usepackage{amsmath}
 \numberwithin{figure}{section}
 \graphicspath{{Images/}}
